# autonomous_exploration_of_unknown_environments

./: .gitignore  README.md  meeting-notes.typ  report.typ  requirements.txt
daddy_niemeyer_ws/src/uav_controller_node/: setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
multi_slam_ws/: README.md
multi_slam_ws/report/: meeting-notes.typ
multi_slam_ws/src/beacons/: package.xml  setup.cfg  setup.py
multi_slam_ws/src/controller/: package.xml  setup.py
multi_slam_ws/src/lidar/: package.xml  setup.py
multi_slam_ws/src/map/: package.xml  setup.py
multi_slam_ws/src/multi_slam/: setup.cfg  setup.py
multi_slam_ws/src/uav_controller_node/: package.xml  setup.cfg
multi_slam_ws/src/vis/: package.xml  setup.cfg  setup.py
multi_slam_ws/src/world_sim/: package.xml  setup.cfg  setup.py
multi_slam_ws/teleop_experiment/: metadata.yaml  teleop_experiment_0.db3
report/: meeting-notes.typ  report.typ
src/multi_slam/: setup.py
src/multi_slam/multi_slam/: ControllerNode.py  Localization.py  Map.py  Mapping.py  PhysicsSimNode.py  PlannerSlamNode.py  SlamNode.py  plotdata.py
src/multi_slam/rviz/: config.rviz
~/cs133b-final-project/slam_sim_ws/src/slam_simulator/: package.xml  setup.py
~/cs133b-final-project/slam_sim_ws/src/slam_simulator/launch/: slam_simulator.launch.py
~/cs133b-final-project/slam_sim_ws/src/slam_simulator/rviz/: slam.rviz
~/cs133b-final-project/slam_sim_ws/src/slam_simulator/slam_simulator/: SlamNode.py  __init__.py  localization.py  map.py  mapping.py
(+55 files in other folders)
